# sigma-engine

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
assets/core/: keybind.json
dev/: CMakeLists.txt  CMakeLists.txt.bak
dev/src/: TestScene.cpp  TestScene.hpp  main.cpp
docs/: .gitignore  Doxyfile
docs/html/: _a_e_audio_8h_source.html  _a_e_collision_8h_source.html  _a_e_colors_8h_source.html  _a_e_debug_8h_source.html  _a_e_engine_8h_source.html  _a_e_frame_rate_controller_8h_source.html  _a_e_game_state_mgr_8h_source.html  _a_e_graphics_8h_source.html  _a_e_input_8h_source.html  _a_e_math_8h_source.html  _a_e_mtx33_8h_source.html  _a_e_mtx44_8h_source.html  _a_e_std_lib_8h_source.html  _a_e_system_8h_source.html  _a_e_transform2_d_8h_source.html  _a_e_util_8h_source.html  _a_e_vec2_8h_source.html  _a_e_vec3_8h_source.html  _audio_data_8cpp.html  _audio_data_8cpp__incl.map  _audio_data_8cpp__incl.md5  _audio_data_8hpp_source.html  _audio_engine_8cpp.html  _audio_engine_8cpp__incl.map  _audio_engine_8cpp__incl.md5  _audio_engine_8hpp_source.html  _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8cpp__incl.md5  _camera_8hpp.html  _camera_8hpp__dep__incl.map  _camera_8hpp__dep__incl.md5  _camera_8hpp__incl.map  _camera_8hpp__incl.md5  _camera_8hpp_source.html  _game_manager_8cpp.html  _game_manager_8cpp__incl.map  _game_manager_8cpp__incl.md5  _game_manager_8hpp.html  _game_manager_8hpp__dep__incl.map  (+684 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  files_2.js  files_4.js  files_5.js  files_7.js  functions_0.js  functions_1.js  (+16 more)
docs/latex/: _a_e_audio_8h_source.tex  _a_e_collision_8h_source.tex  _a_e_colors_8h_source.tex  _a_e_debug_8h_source.tex  _a_e_engine_8h_source.tex  _a_e_frame_rate_controller_8h_source.tex  _a_e_game_state_mgr_8h_source.tex  _a_e_graphics_8h_source.tex  _a_e_input_8h_source.tex  _a_e_math_8h_source.tex  _a_e_mtx33_8h_source.tex  _a_e_mtx44_8h_source.tex  _a_e_std_lib_8h_source.tex  _a_e_system_8h_source.tex  _a_e_transform2_d_8h_source.tex  _a_e_util_8h_source.tex  _a_e_vec2_8h_source.tex  _a_e_vec3_8h_source.tex  _audio_data_8cpp.tex  _audio_data_8cpp__incl.md5  _audio_data_8hpp_source.tex  _audio_engine_8cpp.tex  _audio_engine_8cpp__incl.md5  _audio_engine_8hpp_source.tex  _camera_8cpp.tex  _camera_8cpp__incl.md5  _camera_8hpp.tex  _camera_8hpp__dep__incl.md5  _camera_8hpp__incl.md5  _camera_8hpp_source.tex  _game_manager_8cpp.tex  _game_manager_8cpp__incl.md5  _game_manager_8hpp.tex  _game_manager_8hpp__dep__incl.md5  _game_manager_8hpp__incl.md5  _game_manager_8hpp_source.tex  _game_object_8cpp.tex  _game_object_8cpp__incl.md5  _game_object_8hpp.tex  _game_object_8hpp__dep__incl.md5  (+252 more)
engine/: CMakeLists.txt
engine/inc/aecore/: AEEngine.h  AEFrameRateController.h  AEMtx33.h  AEMtx44.h  AESystem.h  AEVec2.h  AEVec3.h
engine/res/: Master.bank
engine/res/core/: keybinds.json
engine/src/: Core.hpp  Factory.cpp  Factory.cpp.bak  Factory.hpp  GameManager.cpp  GameManager.cpp.bak  GameManager.hpp  GameScene.cpp  GameScene.hpp  GlmAlphaTools.hpp  Polygon.hpp  Scene.hpp  StateManager.hpp  pch.hpp
engine/src/AnimationSystem/: AnimationComponent.cpp  AnimationComponent.hpp  AnimationSystem.cpp  AnimationSystem.hpp
engine/src/Audio/: AudioData.hpp  AudioEngine.cpp  AudioEngine.cpp.bak  AudioEngine.hpp
engine/src/Collision/: ColisionVisualizer.cpp  ColisionVisualizer.hpp  Collider.cpp  Collider.hpp  Collider.hpp.bak  Collision.cpp  Collision.hpp  CollisionEvent.hpp  OneHitCollider.cpp  OneHitCollider.hpp  collision.hpp
engine/src/Controller/: CameraController.cpp  CameraController.hpp  ControllerComponent.hpp  InputComponent.cpp  InputComponent.hpp  InputSystem.cpp  InputSystem.hpp  PlayerController.cpp  PlayerController.cpp.bak  PlayerController.hpp  PlayerController.hpp.bak
engine/src/DamageSystem/: DamageEvent.hpp
engine/src/Events/: Event.hpp  MessageEvent.hpp
engine/src/Objects/: Actor.cpp  Actor.hpp  Camera-dario.bak  Camera.cpp  Camera.hpp  CameraFollow.cpp  CameraFollow.hpp  Character.cpp  Character.cpp.bak  Character.hpp  Character.hpp.bak  Damageable.cpp  Damageable.hpp  Damageable.hpp.bak  Object.hpp  dummy.json
engine/src/UI/: SceneButton.cpp  SceneButton.hpp  UIButton.cpp  UIButton.hpp  UIImage.cpp  UIImage.hpp  UIProgressBar.cpp  UIProgressBar.hpp  UIText.cpp  UIText.hpp
inc/aecore/: AEEngine.h  AEMtx44.h  AEVec3.h
res/: Master.strings.bank  Music.bank  SFX.bank
src/: Actor.cpp  Actor.hpp  Camera.hpp  Character.cpp  Character.hpp  Core.hpp  Factory.cpp  Factory.hpp  GameManager.cpp  GameManager.cpp.bak  GameManager.hpp  GameObject.cpp  GameObject.hpp  Object.hpp  Pawn.cpp  Pawn.hpp  Pch.hpp  StateManager.cpp  StateManager.hpp  main.cpp  pch.cpp  pch.hpp
src/Audio/: AudioData.cpp  AudioData.hpp  AudioEngine.cpp  AudioEngine.hpp
src/Collision/: Collider.cpp  Collider.hpp  Collision.cpp  Collision.hpp
src/Controller/: ControllerComponent.hpp  InputSystem.cpp  InputSystem.hpp  PlayerController.cpp  PlayerController.hpp
src/Events/: Event.hpp
src/Objects/: Actor.cpp  Actor.hpp  ActorTest1.cpp  ActorTest1.hpp  ActorTest2.cpp  ActorTest2.hpp  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  Object.hpp  Pawn.cpp  Pawn.hpp
test/: CMakeLists.txt
test/src/: TestScene.cpp  main.cpp
